Removed school branding

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -14,9 +14,9 @@
         %p.alert
 
     .row
-      #branding.four.columns
+      -##branding.four.columns
         = image_tag 'school-branding-placeholder.png'
-      .four.columns
+      .twelve.columns
         %nav.global
           - if admin_signed_in?
             %p
