--- a/app/views/schools/edit.html.haml
+++ b/app/views/schools/edit.html.haml
@@ -5,9 +5,7 @@
     = f.text_field :name
     = f.label :mascot
     = f.text_field :mascot
-    = f.label :organization_type
-    = f.select :organization_type, organization_types
-    = f.label :city
-    = f.text_field :city
+    = f.label :association
+    = f.select :association, associations
 
     = f.submit 'Submit', class: 'medium secondary button'
