Rename association column on schools
Association is reserved, changed to assn.

--- a/app/views/schools/edit.html.haml
+++ b/app/views/schools/edit.html.haml
@@ -5,7 +5,7 @@
     = f.text_field :name
     = f.label :mascot
     = f.text_field :mascot
-    = f.label :association
-    = f.select :association, associations
+    = f.label :assn
+    = f.select :assn, associations
 
     = f.submit 'Submit', class: 'medium secondary button'
