Refactor school and admin methods and tests.
Minor view cleanup as well.

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -15,8 +15,7 @@
 
     .row
       #branding.six.columns
-        %p
-          %strong [BOX]SCORE
+        %h1 [BOX]SCORE
       .six.columns
         %nav.global
           - if admin_signed_in?
