--- a/app/views/schools/edit.html.haml
+++ b/app/views/schools/edit.html.haml
@@ -1,11 +1,8 @@
 %h1 #{@school.name} - Edit Profile
 .five.columns.centered
-  = form_for @school do |f|
-    = f.label :name
-    = f.text_field :name
-    = f.label :mascot
-    = f.text_field :mascot
-    = f.label :assn
-    = f.select :assn, @school.assns
+  = simple_form_for @school do |f|
+    = f.input :name
+    = f.input :mascot
+    = f.input :assn, collection: @school.assns, label: 'Association'
 
-    = f.submit 'Submit', class: 'medium secondary button'
+    = f.button :submit, class: 'medium secondary button'
