--- a/app/views/schools/show.html.haml
+++ b/app/views/schools/show.html.haml
@@ -5,6 +5,9 @@
     #{@school.mascot}
 %p
   %strong Association:
-  #{@school.assn}
+  #{@school.assn.name}
+%p
+  %strong League:
+  #{@school.league.name}
 - if signed_in? && @school.id == current_admin.school_id
   %p= link_to 'Edit this school profile', edit_school_path(@school)
