--- a/app/views/schools/edit.html.haml
+++ b/app/views/schools/edit.html.haml
@@ -4,6 +4,6 @@
     = f.input :name
     = f.input :mascot
     = f.input :assn_id, collection: Assn.uniq, label: 'Association', include_blank: false
-    = f.input :league_id, collection: League.uniq, label: 'League', include_blank: false
+    = f.input :league_id, collection: League.uniq, label: 'League/Division', include_blank: false
 
     = f.button :submit, class: 'medium secondary button'
