Change association of Assn/League/School
School belongs to League, which belongs to Assn.

--- a/app/views/schools/show.html.haml
+++ b/app/views/schools/show.html.haml
@@ -5,7 +5,7 @@
     #{@school.mascot}
 %p
   %strong Association:
-  #{@school.assn.name}
+  #{@school.league.assn.name}
 %p
   %strong League/Division:
   #{@school.league.name}
