--- a/app/views/schools/edit.html.haml
+++ b/app/views/schools/edit.html.haml
@@ -3,7 +3,6 @@
   = simple_form_for @school do |f|
     = f.input :name
     = f.input :mascot
-    = f.input :assn_id, collection: Assn.uniq, label: 'Association', include_blank: false
-    = f.input :league_id, collection: League.uniq, label: 'League/Division', include_blank: false
+    = f.input :league_id, collection: League.uniq.map{ |league| ["#{league.name} (#{league.assn.name})", league.id] }, label: 'League/Division', include_blank: false
 
     = f.button :submit, class: 'medium secondary button'
