--- a/app/assets/stylesheets/schools.css.scss
+++ b/app/assets/stylesheets/schools.css.scss
@@ -1,5 +1,7 @@
-body.box-score.schools.edit {
-  h1 {
-    text-align: center;
+body.box-score.schools {
+  .admin-menu {
+    li {
+      list-style: none;
+    }
   }
 }
