--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,20 +13,21 @@
         %p.notice
         %p.alert
 
-    .row
-      #branding.six.columns
-        %h1 [BOX]SCORE
-      .six.columns
-        %nav.global
-          - if admin_signed_in?
-            %p
-              Welcome, #{current_admin.name}
-              |
-              %span#registration-links
-                = link_to 'Log out', destroy_admin_session_path, method: :delete, id: 'logout'
-          - else
-            #registration-links
-              = link_to 'Log in', new_admin_session_path, id: 'login'
+    %header.global.twelve.columns
+      .row
+        #branding.six.columns
+          %h5 [BOX]SCORE
+        .six.columns
+          %nav.global
+            - if admin_signed_in?
+              %p
+                Welcome, #{current_admin.name}
+                |
+                %span#registration-links
+                  = link_to 'Log out', destroy_admin_session_path, method: :delete, id: 'logout'
+            - else
+              #registration-links
+                = link_to 'Log in', new_admin_session_path, id: 'login'
 
     .row
       #content.twelve.columns
