Team model started
Removed gender column, as it is part of the sport column.

--- a/app/views/shared/_admin_menu.haml
+++ b/app/views/shared/_admin_menu.haml
@@ -2,5 +2,5 @@
 %nav
   %ul
     %li= link_to 'School Profile', edit_school_path(@school)
-    %li= link_to 'Teams', teams_path(@schools)
-    %li= link_to 'Scores', '#'
+    %li= link_to 'My Teams', school_teams_path(@school)
+    %li= link_to 'My Scores', '#'
