--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -3,12 +3,25 @@ h1, h2, h3, h4, h5 {
 }
 
 h1 {
-  font-size: 24px;
+  font-size: 30px;
+  margin-bottom: 20px;
 }
 
 h2 {
-  font-size: 20px;
+  font-size: 24px;
   font-weight: normal;
+}
+
+h3 {
+  font-size: 16px;
+}
+
+fieldset {
+  padding: 20px;
+}
+
+select {
+  margin-bottom: 10px;
 }
 
 header.global {
@@ -31,4 +44,14 @@ nav.global {
 
 #content {
   margin-top: 20px;
+}
+
+.admin-menu {
+  li {
+    list-style: none;
+  }
+
+  h2 {
+    margin-bottom: 4px;
+  }
 }
