--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,6 +1,7 @@
 /*
  *= require_self
  *= require foundation_and_overrides
+ *= require font-awesome
  *= require global
  *= require schools
  *= require teams
