--- a/app/assets/stylesheets/teams.css.scss
+++ b/app/assets/stylesheets/teams.css.scss
@@ -2,6 +2,10 @@ body.teams {
 
   #teams-list {
     margin-top: 20px;
+
+    table {
+      width: 75%;
+    }
   }
 
   table.roster {
@@ -17,6 +21,11 @@ body.teams {
   a.delete-team {
     display: block;
     float: right;
+  }
+
+  td.action a {
+    font-size: 11px;
+    font-weight: 700;
   }
 
   .player-results {
