Font-awesome icons and admin column formatting

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,2 +1,3 @@
-%h1 Welcome to [Box]Score
-%h5 The place for all of New York's high school sports scores
+.nine.columns
+  %h1 Welcome to [Box]Score
+  %h5 The place for all of New York's high school sports scores
