--- a/app/views/schools/index.html.haml
+++ b/app/views/schools/index.html.haml
@@ -1,3 +1,4 @@
-%h1 All Schools
-- @schools.each do |school|
-  %li= link_to school.name, school_path(school.id)
+.nine.columns
+  %h1 All Schools
+  - @schools.each do |school|
+    %li= link_to school.name, school_path(school.id)
