--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -2,6 +2,7 @@
  *= require_self
  *= require foundation_and_overrides
  *= require font-awesome
+ *= require jquery.ui.datepicker
  *= require global
  *= require schools
  *= require teams
