--- a/app/views/schools/edit.html.haml
+++ b/app/views/schools/edit.html.haml
@@ -3,5 +3,5 @@
   = simple_form_for @school do |f|
     = f.input :name
     = f.input :mascot
-    = f.input :league_id, collection: league_assns, label: 'League/Division', include_blank: false
+    = f.input :league_id, collection: League.names_with_assns_for_select, label: 'League/Division', include_blank: false
     = f.button :submit, class: 'medium secondary button'
