--- a/app/views/teams/_form.html.haml
+++ b/app/views/teams/_form.html.haml
@@ -34,3 +34,5 @@
         .row
           .twelve.columns
             = f.button :submit, 'Create and Add to Roster', class: 'tiny button add-player'
+
+    = link_to 'Create a new game for this team', new_game_path(team_id: @team.id)
