--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -36,3 +36,9 @@
         -if admin_signed_in?
           .three.columns.admin-menu
             = render partial: 'shared/admin_menu'
+
+    :javascript
+      $(document).ready(function(){
+        new BoxScore.Teams();
+        new BoxScore.Games($('form.game'));
+      });
