Create/edit basketball game score data (no player stats)

--- a/app/views/games/_form.html.haml
+++ b/app/views/games/_form.html.haml
@@ -1,13 +1,15 @@
 = simple_form_for @game, html: { class: 'game' } do |f|
   = field_set_tag 'Game Information' do
     = f.input :opponent_id, collection: @game.team.potential_opponents,
-                            label_method: :school_name, include_blank: false, required: false
+      label_method: :school_name, include_blank: false, required: false
     = f.input :site, collection: Site::NAMES, include_blank: false, required: false
-    = f.collection_radio_buttons :home_away, [['home', 'Home'], ['away', 'Away']], :first, :last,
-                                             required: false, label: false
+    .inline-radio
+      = f.collection_radio_buttons :home_away, [['home', 'Home'], ['away', 'Away']], :first, :last,
+        required: false, label: false
     = f.input :date, as: :string, required: false
 
   = field_set_tag 'Game Stats' do
+    = hidden_field_tag :team_id, @game.team_id
     %table.game-stats
       %tr
         %th Team
@@ -17,19 +19,20 @@
         %th Q4
         %th Final
       = f.fields_for :game_stats do |stat|
-        %tr
-          %td= @game.team.school.name
+        %tr.team-game-stats
+          %td.team-name= @game.team.school.name
           %td= stat.input :q1_points, required: false, label: false
           %td= stat.input :q2_points, required: false, label: false
           %td= stat.input :q3_points, required: false, label: false
           %td= stat.input :q4_points, required: false, label: false
-          %td= stat.input :final_points, required: false, label: false
-        %tr
+          %td.final-points= stat.input :final_points, required: false, label: false
+
+        %tr.team-game-stats
           %td.opponent Opponent
           %td= stat.input :opponent_q1_points, required: false, label: false
           %td= stat.input :opponent_q2_points, required: false, label: false
           %td= stat.input :opponent_q3_points, required: false, label: false
           %td= stat.input :opponent_q4_points, required: false, label: false
-          %td= stat.input :opponent_final_points, required: false, label: false
+          %td.final-points= stat.input :opponent_final_points, required: false, label: false
 
   = f.submit 'Save Game Data', class: 'medium button'
