--- a/app/views/shared/_admin_menu.haml
+++ b/app/views/shared/_admin_menu.haml
@@ -12,6 +12,10 @@
         %i.icon-caret-right
         My Teams
     %li
-      %a{ href: '#' }
+      %a{ href: new_game_path }
         %i.icon-caret-right
-        My Games
+        Add Score
+    %li
+      %a{ href: games_path }
+        %i.icon-caret-right
+        Edit Scores
