--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -1,3 +1,5 @@
+@import 'base';
+
 h1, h2, h3, h4, h5 {
   margin-top: 0;
 }
@@ -22,6 +24,22 @@ fieldset {
 
 select {
   margin-bottom: 10px;
+}
+
+input.hasDatepicker {
+  width: 100px;
+}
+
+.inline-radio {
+  margin-bottom: 10px;
+}
+
+label.collection_radio_buttons {
+  display: inline-block;
+}
+
+.error {
+  color: $alert-color;
 }
 
 header.global {
