--- a/app/views/games/new.html.haml
+++ b/app/views/games/new.html.haml
@@ -1,3 +1,3 @@
 .nine.columns
   %h1 Create New Game Score for #{@game.team.school.name} #{@game.team.sport}
-  = render partial: 'form'
+  = render partial: "#{@game.team.sport_type}_form"
