Minor code and copy updates

--- a/app/views/shared/_admin_menu.haml
+++ b/app/views/shared/_admin_menu.haml
@@ -14,8 +14,8 @@
     %li
       %a{ href: new_game_path }
         %i.icon-caret-right
-        Add Score
+        Add Box Score
     %li
       %a{ href: games_path }
         %i.icon-caret-right
-        Edit Scores
+        Edit Box Scores
