--- a/app/views/games/edit.html.haml
+++ b/app/views/games/edit.html.haml
@@ -1,3 +1,3 @@
 .nine.columns
-  %h1 Edit Game Score for #{@game.team.school.name} #{@game.team.sport}
+  %h1 Edit Box score for #{@game.team.school.name} #{@game.team.sport}
   = render partial: "#{@game.team.sport_type}_form"
