--- a/app/views/teams/_form.html.haml
+++ b/app/views/teams/_form.html.haml
@@ -3,7 +3,7 @@
     = simple_form_for @team do |f|
       = field_set_tag 'Sport and Season' do
         = f.input :sport, collection: Sport::NAMES, include_blank: false
-        = f.input :season_id, collection: league_seasons(@team), include_blank: false
+        = f.input :season_id, collection: Season.all, label_method: :year_and_sport, include_blank: false
 
       = field_set_tag 'Roster' do
         %table.roster
