changed add box score workflow
Load opponents, stats form via ajax once teams are
selected.

--- a/app/assets/stylesheets/games.css.scss
+++ b/app/assets/stylesheets/games.css.scss
@@ -8,9 +8,10 @@ table.game-stats {
       width: 50px;
     }
     &.final-points {
-      input {
-        width: 75px;
-      }
+      width: 75px;
+      text-align: right;
+      font-weight: bold;
+      font-size: 18px;
     }
   }
 }
