--- a/app/views/games/_basketball_form.html.haml
+++ b/app/views/games/_basketball_form.html.haml
@@ -1,27 +1,48 @@
-= simple_form_for @game, html: { class: 'game' } do |f|
-  = field_set_tag 'Game Information' do
-    = f.input :opponent_id, collection: @game.team.potential_opponents,
-      label_method: :school_name, include_blank: false, required: false
-    = f.input :site, collection: Site::NAMES, include_blank: false, required: false
-    .inline-radio
-      = f.collection_radio_buttons :home_away, [['home', 'Home'], ['away', 'Away']], :first, :last,
-        required: false, label: false
-    = f.input :date, as: :string, required: false
-
-  %h2= @game.team.school.name
+= field_set_tag 'Player Stats' do
   %table.player-stats
-    %tr
-      %th Player
-      %th Pos
-      %th Pts
-      %th FG
-      %th FGA
-      %th 3pt FG
-      %th 3pt FGA
-      %th FT
-      %th FTA
-      %th Reb
-      %th A
+    %thead
+      %tr
+        %th Player
+        %th Pos
+        %th Pts
+        %th FG
+        %th FGA
+        %th 3pt FG
+        %th 3pt FGA
+        %th FT
+        %th FTA
+        %th Reb
+        %th A
+
+    %tbody
+      / = fields_for game do |game_form|
+      /   = game_form.fields_for :player_game_stats do |player_stats_form|
+  
+      - game.team.players.each do |player|
+        %tr
+          %td
+            = player.name
+            %input{ name: 'game[player_game_stats][][player_id]', type: 'hidden', value: player.id }
+          %td
+            %input{ name: 'game[player_game_stats][][stats][position]', type: 'text', value: '' }
+          %td
+            %input{ name: 'game[player_game_stats][][stats][points]', type: 'text', value: '' }
+          %td
+            %input{ name: 'game[player_game_stats][][stats][fg]', type: 'text', value: '' }
+          %td
+            %input{ name: 'game[player_game_stats][][stats][fga]', type: 'text', value: '' }
+          %td
+            %input{ name: 'game[player_game_stats][][stats][3pt_fg]', type: 'text', value: '' }
+          %td
+            %input{ name: 'game[player_game_stats][][stats][3pt_fga]', type: 'text', value: '' }
+          %td
+            %input{ name: 'game[player_game_stats][][stats][ft]', type: 'text', value: '' }
+          %td
+            %input{ name: 'game[player_game_stats][][stats][fta]', type: 'text', value: '' }
+          %td
+            %input{ name: 'game[player_game_stats][][stats][rebounds]', type: 'text', value: '' }
+          %td
+            %input{ name: 'game[player_game_stats][][stats][assists]', type: 'text', value: '' }
 
   %h2 Opponent
   %table.player-stats
@@ -38,31 +59,74 @@
       %th Reb
       %th A
 
-  = field_set_tag 'Game Stats' do
-    = hidden_field_tag :team_id, @game.team_id
-    %table.game-stats
+= field_set_tag 'Game Stats' do
+  %table.game-stats
+    %thead
       %tr
         %th Team
         %th Q1
         %th Q2
         %th Q3
         %th Q4
+        %th OT1
+        %th OT2
         %th Final
-      = f.fields_for :game_stats do |stat|
-        %tr.team-game-stats
-          %td.team-name= @game.team.school.name
-          %td= stat.input :q1_points, required: false, label: false
-          %td= stat.input :q2_points, required: false, label: false
-          %td= stat.input :q3_points, required: false, label: false
-          %td= stat.input :q4_points, required: false, label: false
-          %td.final-points= stat.input :final_points, required: false, label: false
 
-        %tr.team-game-stats
-          %td.opponent Opponent
-          %td= stat.input :opponent_q1_points, required: false, label: false
-          %td= stat.input :opponent_q2_points, required: false, label: false
-          %td= stat.input :opponent_q3_points, required: false, label: false
-          %td= stat.input :opponent_q4_points, required: false, label: false
-          %td.final-points= stat.input :opponent_final_points, required: false, label: false
+    %tbody
+      %tr
+        %td.team-name= game.team.display_name
 
-  = f.submit 'Save Game Data', class: 'medium button'
+        - %w{1 2 3 4 OT1 OT2}.each do |period|
+          %td{ class: period.to_s.downcase }
+            %input{ name: game_stats_period_field(game.team, period), type: 'text', value: game.stats.team_stats(game.team_id).points(period) }
+
+        %td.final-points
+          = game.stats.team_stats(game.team_id).final
+
+      %tr
+        %td.opponent= game.opponent.display_name
+
+        - %w{1 2 3 4 OT1 OT2}.each do |period|
+          %td{ class: period.to_s.downcase }
+            %input{ name: game_stats_period_field(game.opponent, period), type: 'text', value: game.stats.team_stats(game.opponent_id).points(period) }
+
+        %td.final-points
+          = game.stats.team_stats(game.opponent_id).final
+
+/ 
+/ games_stats: {
+/   team_id: {
+/     q1: 25,
+/     q2: 20,
+/     q3: 22,
+/     q4: 28,
+/     final: 100
+/   }
+/ }
+/ 
+/ games_stats: {
+/   team_id: {
+/     quarters: {
+/       1: 25,
+/       2: 20,
+/       3: 22,
+/       4: 28
+/     },
+/     final: 100
+/   }
+/ }
+/ 
+/ games_stats: {
+/   team_id: {
+/     innings: {
+/       1: 2,
+/       2: 0,
+/       3: 1,
+/       4: 0,
+/       5: 0
+/     }
+/     final: 3
+/   }
+/ }
+/ 
+/ games_stats[team_id][:innings][19]
