Add extra periods to games
Also add "batters" and "pitchers" headers

--- a/app/views/games/_baseball_player_stats.html.haml
+++ b/app/views/games/_baseball_player_stats.html.haml
@@ -1,3 +1,4 @@
+%h3 Batters
 %table.player-stats.batters
   %thead
     %tr
@@ -28,6 +29,7 @@
         %td
           %input{ name: 'game[player_game_stats][][stats][batting][e]', type: 'text', value: '' }
 
+%h3 Pitchers
 %table.player-stats.pitchers
   %thead
     %tr
