--- a/app/views/games/_baseball_form.html.haml
+++ b/app/views/games/_baseball_form.html.haml
@@ -17,17 +17,22 @@
         %th 5
         %th 6
         %th 7
+        %th.add-period
+          %a{ href: '#', title: 'Add inning' }
+            %span.icon-plus
         %th R
         %th H
         %th E
 
     %tbody
-      %tr
+      %tr.period-scores
         %td.team-name= game.team.school.name
 
         - %w{1 2 3 4 5 6 7}.each do |period|
           %td{ class: period.to_s.downcase }
             %input{ name: game_stats_period_field(game.team, period), type: 'text', value: game.stats.team_stats(game.team_id).points(period) }
+
+        %td.add-period
 
         %td.final-points
           = game.stats.team_stats(game.team_id).final
@@ -38,7 +43,7 @@
         %td.errors
           %input{ name: 'errors', type: 'text', value: game.stats.team_stats(game.team_id).errors }
 
-      %tr
+      %tr.opponent-period-scores
         %td.opponent= game.opponent.school.name
 
         - %w{1 2 3 4 5 6 7}.each do |period|
@@ -46,6 +51,8 @@
             %input{ name: game_stats_period_field(game.opponent, period), type: 'text', value: game.stats.team_stats(game.opponent_id).points(period) }
 
         %td.final-points
+
+        %td.add-period
           = game.stats.team_stats(game.opponent_id).final
 
         %td.hits
