--- a/app/views/games/_basketball_form.html.haml
+++ b/app/views/games/_basketball_form.html.haml
@@ -30,7 +30,7 @@
         %td.final-points
           = game.stats.team_stats(game.team_id).final
 
-      %tr.opponent-period-scores
+      %tr.period-scores
         %td.opponent= game.opponent.school.name
 
         - %w{1 2 3 4}.each do |period|
