--- a/app/views/teams/_form.html.haml
+++ b/app/views/teams/_form.html.haml
@@ -36,3 +36,8 @@
         .row
           .twelve.columns
             = f.button :submit, 'Create and Add to Roster', class: 'tiny button add-player'
+
+:javascript
+  $(document).ready(function(){
+    new BoxScore.Teams();
+  });
